Preparing notebooks lfya to share

--- a/lfya/01 De lenguajes y palabras.ipynb
+++ b/lfya/01 De lenguajes y palabras.ipynb
@@ -4,14 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/01%20De%20lenguajes%20y%20palabras.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/01%20De%20lenguajes%20y%20palabras.ipynb)\n",
+    "\n",
+    "\n",
+    "# 01 De lenguajes y palabras\n",
+    "\n",
+    "Esta notebook ilustra los conceptos de [**Lenguajes y palabras**](https://ivanvladimir.gitlab.io/lfya_book/docs/01delenguajesypalabras/) correspondiente al curso de [**Lenguajes Formales y Autómatas**](https://turing.iimas.unam.mx/~ivanvladimir/page/curso_lfya/)\n",
+    "\n",
+    "\n",
+    "## Instrucciones\n",
+    "\n",
+    "1. Si la librería [**maquinas**](https://pypi.org/project/maquinas/) no está instalada ejecutar la celdas correspondiente a la sección marcada con ◉\n",
+    "2. Importar los módulos de librería relevantes\n",
+    "3. Ejecuar las celdas para explorar los conceptos\n",
+    "\n",
+    "\n",
+    "## Licencia de la notebook\n",
+    "\n",
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a>\n",
+    "</br>This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Creative Commons Attribution 4.0 International License</a>.\n",
+    "\n",
+    "## General information\n",
+    "\n",
+    "> **Author(s)**: <a href=\"https://twitter.com/ivanvladimir\">@ivanvladimir</a></br>\n",
+    "> **Last updated**: 24/01/2023"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 00 Instalando la librería \n",
+    "### ◉ Instalando la librería \n",
     "\n",
     "Se instala la librería [maquinas](https://pypi.org/project/maquinas/)\n",
     "\n",
@@ -266,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Más lenguajes notables\n",
+    "### Lenguajes notables\n",
     "\n",
     "\n",
     "Dos [lenguajes notables](https://ivanvladimir.gitlab.io/lfya_book/docs/01delenguajesypalabras/02b%C3%A1sicos/#lenguajes-notables) y uno normal"
@@ -492,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 03 Other operations"
+    "## 03 Otras operaciones"
    ]
   },
   {
@@ -539,7 +562,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Substición"
+    "#### Substición\n",
+    "\n",
+    "Ver definición [aquí](https://en.wikipedia.org/wiki/String_operations#String_substitution)"
    ]
   },
   {
@@ -556,7 +581,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Projección"
+    "#### Proyección\n",
+    "\n",
+    "Ver definición [aquí](https://en.wikipedia.org/wiki/String_operations#String_projection)\n",
+    "\n",
+    "En necesario definir un parámetro _max_ bajo de otra forma la operación de tarda mucho tiempo"
    ]
   },
   {
@@ -569,7 +598,6 @@
     "\n",
     "#If larger it could take a while to calculate\n",
     "L1.max=5\n",
-    "l.max=20\n",
     "l=L1.star().projection(['b'])\n",
     "print(\"Proyección L1*: \\n\",L1.star().projection(['b']))"
    ]
@@ -578,7 +606,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 'Cociente' "
+    "#### 'Cociente' \n",
+    "\n",
+    "Ver definición [aquí](https://en.wikipedia.org/wiki/String_operations#Right_quotient)"
    ]
   },
   {
@@ -602,7 +632,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cancelación"
+    "#### Cancelación\n",
+    "\n",
+    "Ver definición [aquí](https://en.wikipedia.org/wiki/String_operations#Right_cancellation)"
    ]
   },
   {
