--- a/lfya/02 La máquina sin memoria.ipynb
+++ b/lfya/02 La máquina sin memoria.ipynb
@@ -4,14 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/02%20La%20m%C3%A1quina%20sin%20memoria.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/02%20La%20m%C3%A1quina%20sin%20memoria.ipynb)\n",
+    "\n",
+    "\n",
+    "# 02 La máquina sin memoria\n",
+    "\n",
+    "Esta notebook ilustra los conceptos de [**la máquina sin memoria**](https://ivanvladimir.gitlab.io/lfya_book/docs/02lam%C3%A1quinasinmemoria/) correspondiente al curso de [**Lenguajes Formales y Autómatas**](https://turing.iimas.unam.mx/~ivanvladimir/page/curso_lfya/)\n",
+    "\n",
+    "\n",
+    "## Instrucciones\n",
+    "\n",
+    "1. Si la librería [**maquinas**](https://pypi.org/project/maquinas/) no está instalada ejecutar la celdas correspondiente a la sección marcada con ◉\n",
+    "2. Importar los módulos de librería relevantes\n",
+    "3. Ejecuar las celdas para explorar los conceptos\n",
+    "\n",
+    "\n",
+    "## Licencia de la notebook\n",
+    "\n",
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a>\n",
+    "</br>This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Creative Commons Attribution 4.0 International License</a>.\n",
+    "\n",
+    "## General information\n",
+    "\n",
+    "> **Author(s)**: <a href=\"https://twitter.com/ivanvladimir\">@ivanvladimir</a></br>\n",
+    "> **Last updated**: 24/01/2023"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 00 Instalando la librería \n",
+    "### ◉ Instalando la librería \n",
     "\n",
     "Se instala la librería [maquinas](https://pypi.org/project/maquinas/)\n",
     "\n",
@@ -111,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bes_pares.graph()"
+    "bes_pares.graph(dpi=\"100\")"
    ]
   },
   {
@@ -187,7 +210,7 @@
     "   q₁]   |q₁  | q₀\n",
     "\"\"\")\n",
     "bes_impares.print_summary()\n",
-    "bes_impares.graph()"
+    "bes_impares.graph(dpi=\"100\")"
    ]
   },
   {
@@ -224,7 +247,7 @@
     "   q₁]  |q₁  | q₀\n",
     "\"\"\")\n",
     "sigma_star.print_summary()\n",
-    "sigma_star.graph()"
+    "sigma_star.graph(dpi=\"100\")"
    ]
   },
   {
