--- a/lfya/03 Las máquina que están en varios lugares.ipynb
+++ b/lfya/03 Las máquina que están en varios lugares.ipynb
@@ -4,14 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/03%20Las%20m%C3%A1quina%20que%20est%C3%A1n%20en%20varios%20lugares.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/03%20Las%20m%C3%A1quina%20que%20est%C3%A1n%20en%20varios%20lugares.ipynb)\n",
+    "\n",
+    "\n",
+    "# 03 Las máquinas que están en varios lugares\n",
+    "\n",
+    "Esta notebook ilustra los conceptos de [**Las máquinas que están en varios lugares**](https://ivanvladimir.gitlab.io/lfya_book/docs/03maquinasqueest%C3%A1nenvarioslugares/) correspondiente al curso de [**Lenguajes Formales y Autómatas**](https://turing.iimas.unam.mx/~ivanvladimir/page/curso_lfya/)\n",
+    "\n",
+    "\n",
+    "## Instrucciones\n",
+    "\n",
+    "1. Si la librería [**maquinas**](https://pypi.org/project/maquinas/) no está instalada ejecutar la celdas correspondiente a la sección marcada con ◉\n",
+    "2. Importar los módulos de librería relevantes\n",
+    "3. Ejecuar las celdas para explorar los conceptos\n",
+    "\n",
+    "\n",
+    "## Licencia de la notebook\n",
+    "\n",
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a>\n",
+    "</br>This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Creative Commons Attribution 4.0 International License</a>.\n",
+    "\n",
+    "## General information\n",
+    "\n",
+    "> **Author(s)**: <a href=\"https://twitter.com/ivanvladimir\">@ivanvladimir</a></br>\n",
+    "> **Last updated**: 24/01/2023"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 00 Instalando la librería \n",
+    "### ◉ Instalando la librería \n",
     "\n",
     "Se instala la librería [maquinas](https://pypi.org/project/maquinas/)\n",
     "\n",
@@ -25,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Execute if not installed\n",
-    "!pip install maquinas"
+    "!pip install maquinas --upgrade"
    ]
   },
   {
@@ -39,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +117,7 @@
     "   q₂₁_₁₂/₈  |              q₅               |                               |                               |\n",
     "   q₅]       |                               |                               |                               |\n",
     "\"\"\")\n",
-    "chicles_1.graph()"
+    "chicles_1.graph(dpi=\"90\")"
    ]
   },
   {
@@ -288,7 +311,7 @@
    },
    "outputs": [],
    "source": [
-    "chicles_2.graph()"
+    "chicles_2.graph(dpi=\"100\")"
    ]
   },
   {
@@ -334,6 +357,7 @@
     "                 q_0=chicles_2.q_0,\n",
     "                 A=chicles_2.A,\n",
     "                 delta=[(k,[qs]) for k,qs in chicles_2.items()])\n",
+    "\n",
     "# Aquí se conecta todos los estados finales con el inicial\n",
     "for q_f in chicles_3.A:\n",
     "    chicles_3.add_transition(q_f,'ε',[chicles_3.q_0])"
@@ -345,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chicles_3.graph()"
+    "chicles_3.graph(dpi=\"100\")"
    ]
   },
   {
@@ -408,7 +432,7 @@
    "outputs": [],
    "source": [
     "chicles_4=ndfa_e2ndfa(chicles_3, rename=False)\n",
-    "chicles_4.graph()"
+    "chicles_4.graph(dpi=\"100\")"
    ]
   },
   {
@@ -438,7 +462,8 @@
    "outputs": [],
    "source": [
     "chicles_5=ndfa2dfa(chicles_4)\n",
-    "chicles_5.graph()"
+    "chicles_5.print_summary()\n",
+    "chicles_5.graph(dpi=\"100\")"
    ]
   },
   {
@@ -457,8 +482,8 @@
    "outputs": [],
    "source": [
     "# agregando aceptar el pago: 2,2,2,2,2\n",
-    "chicles_5.add_transition('q_7','2','q_1',force=True)\n",
-    "chicles_5.graph()"
+    "#chicles_5.add_transition('q_7','2','q_4',force=True)\n",
+    "#chicles_5.graph(dpi=\"100\")"
    ]
   },
   {
@@ -467,14 +492,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for q,a,w_ in chicles_5.delta_stepwise(\"22222\"):\n",
-    "    if a:\n",
-    "        print(f\"{a} -> {q}\", end=\",\\n \")\n",
-    "    else:\n",
-    "        print(f\"{q}\",end=\"\\n \")\n",
-    "    res=q\n",
-    "    \n",
-    "print(f\"\\nCon {res} Se acepta?\", \"Sí\" if chicles_3.acceptor(res) else \"No\" )"
+    "#for q,a,w_ in chicles_5.delta_stepwise(\"22222\"):\n",
+    "#    if a:\n",
+    "#        print(f\"{a} -> {q}\", end=\",\\n \")\n",
+    "#    else:\n",
+    "#        print(f\"{q}\",end=\"\\n \")\n",
+    "#    res=q\n",
+    "#    \n",
+    "#print(f\"\\nCon {res} Se acepta?\", \"Sí\" if chicles_3.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -501,7 +526,7 @@
     "\n",
     "\"\"\")\n",
     "ceros_uno=dfa2ndfa_e(ceros_uno) \n",
-    "ceros_uno.graph()"
+    "ceros_uno.graph(dpi=\"100\")"
    ]
   },
   {
@@ -517,7 +542,7 @@
     "\n",
     "\"\"\")\n",
     "uno_ceros=dfa2ndfa_e(uno_ceros)\n",
-    "uno_ceros.graph()"
+    "uno_ceros.graph(dpi=\"100\")"
    ]
   },
   {
@@ -535,7 +560,7 @@
    "source": [
     "union=ceros_uno.union(uno_ceros)\n",
     "union.save_img('union')\n",
-    "union.graph()"
+    "union.graph(dpi=\"100\")"
    ]
   },
   {
@@ -553,7 +578,7 @@
    "source": [
     "concat=ceros_uno.concat(uno_ceros)\n",
     "concat.save_img('concat')\n",
-    "concat.graph()"
+    "concat.graph(dpi=\"100\")"
    ]
   },
   {
@@ -571,7 +596,7 @@
    "source": [
     "kleene=ceros_uno.kleene()\n",
     "kleene.save_img(\"cerradura\")\n",
-    "kleene.graph()"
+    "kleene.graph(dpi=\"100\")"
    ]
   },
   {
@@ -599,7 +624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.graph()"
+    "reg.graph(dpi=\"100\")"
    ]
   },
   {
@@ -611,7 +636,7 @@
     "reg_a = RE('a')\n",
     "reg_a=reg_a.ndfa_e()\n",
     "reg_a.save_img(\"reg_a\")\n",
-    "reg_a.graph()"
+    "reg_a.graph(dpi=\"100\")"
    ]
   },
   {
@@ -623,7 +648,7 @@
     "reg_a = RE('a*')\n",
     "reg_a=reg_a.ndfa_e()\n",
     "reg_a.save_img(\"reg_a_klene\")\n",
-    "reg_a.graph()"
+    "reg_a.graph(dpi=\"100\")"
    ]
   },
   {
@@ -635,7 +660,7 @@
     "reg_a_b = RE('a*b')\n",
     "reg_a_b=reg_a_b.ndfa_e()\n",
     "reg_a_b.save_img(\"reg_a_b_klene\")\n",
-    "reg_a_b.graph()"
+    "reg_a_b.graph(dpi=\"100\")"
    ]
   },
   {
@@ -680,7 +705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_one.graph()"
+    "one_one.graph(dpi=\"100\")"
    ]
   },
   {
@@ -707,7 +732,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_one_min.graph()"
+    "one_one_min.graph(dpi=\"100\")"
    ]
   },
   {
@@ -731,7 +756,7 @@
     "                            (('q_3','a'),'q_3'),\n",
     "                            (('q_3','b'),'q_1'),\n",
     "                         ])\n",
-    "bes_divisible_by_3.graph()"
+    "bes_divisible_by_3.graph(dpi=\"100\")"
    ]
   },
   {
@@ -741,8 +766,15 @@
    "outputs": [],
    "source": [
     "mini=minimization_hopcroft(bes_divisible_by_3)\n",
-    "mini.graph()"
+    "mini.graph(dpi=\"100\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
