--- a/lfya/04 Abro paréntesis, abro paréntesis, cierro paréntesis.ipynb
+++ b/lfya/04 Abro paréntesis, abro paréntesis, cierro paréntesis.ipynb
@@ -4,7 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/04%20Abro%20par%C3%A9ntesis%2C%20abro%20par%C3%A9ntesis%2C%20cierro%20par%C3%A9ntesis.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/04%20Abro%20par%C3%A9ntesis%2C%20abro%20par%C3%A9ntesis%2C%20cierro%20par%C3%A9ntesis.ipynb)\n",
+    "\n",
+    "\n",
+    "# 04 Abro paréntesis, abro paréntesis, cierro paréntesis\n",
+    "\n",
+    "Esta notebook ilustra los conceptos de [**abro paréntesis, abro paréntesis, cierro paréntesis**](04 Abro paréntesis, abro paréntesis, cierro paréntesis) correspondiente al curso de [**Lenguajes Formales y Autómatas**](https://turing.iimas.unam.mx/~ivanvladimir/page/curso_lfya/)\n",
+    "\n",
+    "\n",
+    "## Instrucciones\n",
+    "\n",
+    "1. Si la librería [**maquinas**](https://pypi.org/project/maquinas/) no está instalada ejecutar la celdas correspondiente a la sección marcada con ◉\n",
+    "2. Importar los módulos de librería relevantes\n",
+    "3. Ejecuar las celdas para explorar los conceptos\n",
+    "\n",
+    "\n",
+    "## Licencia de la notebook\n",
+    "\n",
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a>\n",
+    "</br>This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Creative Commons Attribution 4.0 International License</a>.\n",
+    "\n",
+    "## General information\n",
+    "\n",
+    "> **Author(s)**: <a href=\"https://twitter.com/ivanvladimir\">@ivanvladimir</a></br>\n",
+    "> **Last updated**: 24/01/2023"
    ]
   },
   {
@@ -25,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Execute if not installes\n",
-    "!pip install maquinas"
+    "!pip install maquinas --upgrade"
    ]
   },
   {
@@ -87,8 +110,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Analysis de cadena\n",
     "roots,chart,forest=aⁿbⁿ.parse('aaaabbbb')\n",
+    "# Extrae árboles\n",
     "trees=aⁿbⁿ.extract_trees(forest)\n",
+    "# Identifica el primer arból\n",
     "tree=list(trees)[0]\n",
     "for i,step in enumerate(aⁿbⁿ.derivation(tree)):\n",
     "    if not i:\n",
@@ -219,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
