--- a/lfya/05 Gramáticas libres de contexto en su habitat... y AP.ipynb
+++ b/lfya/05 Gramáticas libres de contexto en su habitat... y AP.ipynb
@@ -4,7 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/05%20Gram%C3%A1ticas%20libres%20de%20contexto%20en%20su%20habitat...%20y%20AP.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/05%20Gram%C3%A1ticas%20libres%20de%20contexto%20en%20su%20habitat...%20y%20AP.ipynb)\n",
+    "\n",
+    "\n",
+    "# 05 Gramáticas libres de contexto en su habitat... y AP\n",
+    "\n",
+    "Esta notebook ilustra los conceptos de [**Gramáticas libres de contexto en su habitat... y AP**](https://ivanvladimir.gitlab.io/lfya_book/docs/05gram%C3%A1ticaslibresdecontextoensuh%C3%A1bitatyap/) correspondiente al curso de [**Lenguajes Formales y Autómatas**](https://turing.iimas.unam.mx/~ivanvladimir/page/curso_lfya/)\n",
+    "\n",
+    "\n",
+    "## Instrucciones\n",
+    "\n",
+    "1. Si la librería [**maquinas**](https://pypi.org/project/maquinas/) no está instalada ejecutar la celdas correspondiente a la sección marcada con ◉\n",
+    "2. Importar los módulos de librería relevantes\n",
+    "3. Ejecuar las celdas para explorar los conceptos\n",
+    "\n",
+    "\n",
+    "## Licencia de la notebook\n",
+    "\n",
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a>\n",
+    "</br>This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Creative Commons Attribution 4.0 International License</a>.\n",
+    "\n",
+    "## General information\n",
+    "\n",
+    "> **Author(s)**: <a href=\"https://twitter.com/ivanvladimir\">@ivanvladimir</a></br>\n",
+    "> **Last updated**: 24/01/2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ◉ Instalando la librería \n",
+    "\n",
+    "Se instala la librería [maquinas](https://pypi.org/project/maquinas/)\n",
+    "\n",
+    "**Requerido en colab**, _opcional en ambiente local a través de jupyter_"
    ]
   },
   {
@@ -14,7 +48,16 @@
    "outputs": [],
    "source": [
     "# Execute if not installed\n",
-    "!pip install maquinas"
+    "!pip install maquinas --upgrade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 01 Importar módulos\n",
+    "\n",
+    "Se importan las [Gramaticas Libres de Contexto](https://ivanvladimir.gitlab.io/lfya_book/docs/04abropar%C3%A9ntesisabropar%C3%A9ntesiscierropar%C3%A9ntesis/03gram%C3%A1ticaslibresdecontexto/) (CFG), las [Gramáticas Regulares](https://ivanvladimir.gitlab.io/lfya_book/docs/05gram%C3%A1ticaslibresdecontextoensuh%C3%A1bitatyap/07gram%C3%A1ticasregulares/) (RG) y [Autómatas de pila](https://ivanvladimir.gitlab.io/lfya_book/docs/05gram%C3%A1ticaslibresdecontextoensuh%C3%A1bitatyap/08aut%C3%B3matasdepila/) (AP)"
    ]
   },
   {
@@ -24,7 +67,19 @@
    "outputs": [],
    "source": [
     "from maquinas.contextfree.cfg import ContextFreeGrammar as CFG\n",
-    "from maquinas.regular.rg import RegularGrammar as RG"
+    "from maquinas.regular.rg import RegularGrammar as RG\n",
+    "from maquinas.contextfree.pda import PushDownAutomaton as PDA\n",
+    "from maquinas.simulation import Simulation\n",
+    "from maquinas.io import load_pda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 02 Ambigüedad\n",
+    "\n",
+    "Algunas gramáticas tienen la propiedad de ser [ambiguas](https://ivanvladimir.gitlab.io/lfya_book/docs/05gram%C3%A1ticaslibresdecontextoensuh%C3%A1bitatyap/08aut%C3%B3matasdepila/)"
    ]
   },
   {
@@ -34,7 +89,7 @@
    "outputs": [],
    "source": [
     "gato=CFG('S->V; V-> vN; V -> vNP; N -> a; N -> N P ; P -> c')\n",
-    "print(gato.summary())"
+    "gato.print_summary()"
    ]
   },
   {
@@ -48,13 +103,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gramática no ambigua para ER\n",
+    "\n",
+    "Algunas gramáticas comienzan como <a href=\"https://ivanvladimir.gitlab.io/lfya_book/docs/04abroparéntesisabroparéntesiscierparéntesis/04ejemplogramática/\">ambiguas</a> ... pueden re-escribirse para que [no lo sean](https://ivanvladimir.gitlab.io/lfya_book/docs/05gram%C3%A1ticaslibresdecontextoensuh%C3%A1bitatyap/03gram%C3%A1ticanoambigua/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "re=CFG('E-> T; E -> E \"+\" T; T -> F; T -> TF ; F -> B; F -> F* ; F -> \"(\" E \")\"; B-> a; B -> b; B -> \"ϵ\"; B -> \"∅\"')\n",
-    "print(re.summary())"
+    "re.print_summary()"
    ]
   },
   {
@@ -78,7 +142,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "re.save_trees_img(trees,filename='arboles_re')"
+    "re.graph_trees(trees)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gramática ambigua\n",
+    "\n",
+    "Otras gramáticas es imposible reducirlas para que no sean ambiguas"
    ]
   },
   {
@@ -88,7 +161,7 @@
    "outputs": [],
    "source": [
     "ambigua=CFG('S -> X; S -> R; X-> YZ; Y -> aYb; Y-> epsilon;  Z -> cZd; Z -> epsilon; R -> aRd; R -> T; T ->bTc ; T -> epsilon')\n",
-    "print(ambigua.summary())"
+    "ambigua.print_summary()"
    ]
   },
   {
@@ -112,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ambigua.save_trees_img(trees,filename='aabbcd')"
+    "ambigua.graph_trees(trees)"
    ]
   },
   {
@@ -136,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ambigua.save_trees_img(trees,filename='aabcdd')"
+    "ambigua.graph_trees(trees)"
    ]
   },
   {
@@ -160,7 +233,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ambigua.save_trees_img(trees,filename='aabbccdd')"
+    "ambigua.graph_trees(trees)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gramáticas regulares\n",
+    "\n",
+    "Además de las CFG, existen [Gramáticas Regulares](https://ivanvladimir.gitlab.io/lfya_book/docs/05gram%C3%A1ticaslibresdecontextoensuh%C3%A1bitatyap/07gram%C3%A1ticasregulares/)"
    ]
   },
   {
@@ -169,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regular=CFG('A-> aA; A->bB; B -> aB; B->bA; A->a; B->b')\n",
+    "regular=RG(\"S-> aS; S-> bA; A -> epsilon; A -> cA;\")\n",
     "print(regular.summary())"
    ]
   },
@@ -179,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roots,chart,forest=regular.parse('aabbabaaaaba')\n",
+    "roots,chart,forest=regular.parse('abc')\n",
     "trees=list(regular.extract_trees(forest))\n",
     "for i,step in enumerate(regular.derivation(trees[0])):\n",
     "    if not i:\n",
@@ -194,7 +276,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regular.save_trees_img(trees,filename='gr')"
+    "regular.graph_trees(trees)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 03 Autómata de Pila\n",
+    "\n",
+    "Se puede crear un [AP](https://ivanvladimir.gitlab.io/lfya_book/docs/05gram%C3%A1ticaslibresdecontextoensuh%C3%A1bitatyap/08aut%C3%B3matasdepila/) desde código; la función _load_pda_ permite cargar la definición desde una cadena con formato de tabla"
    ]
   },
   {
@@ -203,18 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from maquinas.contextfree.pda import PushDownAutomaton as PDA\n",
-    "from maquinas.simulation import Simulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ejercicio uno\n",
-    "anbn=PDA(Q=['q_0','q_1','q_2'],\n",
+    "aⁿbⁿ=PDA(Q=['q_0','q_1','q_2'],\n",
     "         sigma=['a','b'],\n",
     "         gamma=['A'],\n",
     "         q_0='q_0',\n",
@@ -226,7 +306,8 @@
     "            (('q_1','b','A'),[('q_1','epsilon')]),\n",
     "            (('q_1','epsilon','Z0'),[('q_2','Z0')])\n",
     "         ]\n",
-    "    )"
+    "    )\n",
+    "aⁿbⁿ.print_summary()"
    ]
   },
   {
@@ -235,14 +316,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for q,a,w_ in anbn.delta_stepwise(\"aaabbb\"):\n",
+    "aⁿbⁿ=load_pda(\"\"\"\n",
+    "        |     ε     |          a          |    b    |\n",
+    " ->q_0  |           | Z₀/AZ₀→q_0,A/AA→q_0 | A/ε→q_1 |\n",
+    "   q_1  | Z₀/Z₀→q_2 |                     | A/ε→q_1 |\n",
+    "   q_2] |           |                     |         |\n",
+    "\"\"\")\n",
+    "aⁿbⁿ.print_summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for q,a,w_ in aⁿbⁿ.delta_stepwise(\"aaabb\"):\n",
     "    if a:\n",
-    "        print(f\"{a} -> {anbn.states2string(q)}\", end=\",\\n \")\n",
+    "        print(f\"{a} -> {aⁿbⁿ.states2string(q)}\", end=\",\\n \")\n",
     "    else:\n",
-    "        print(f\"{anbn.states2string(q)}\",end=\"\\n \")\n",
+    "        print(f\"{aⁿbⁿ.states2string(q)}\",end=\"\\n \")\n",
     "    res=q\n",
     "    \n",
-    "print(f\"\\nCon {anbn.states2string(res)} Se acepta?\", \"Sí\" if anbn.acceptor(res) else \"No\" )"
+    "print(f\"\\nCon {aⁿbⁿ.states2string(res)} Se acepta?\", \"Sí\" if anbn.acceptor(res) else \"No\" )"
    ]
   },
   {
@@ -251,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anbn.save_img('anbn')"
+    "aⁿbⁿ.graph(dpi=\"100\")"
    ]
   },
   {
@@ -260,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anbn.save_gif(\"aaabbb\",'anbn.gif')"
+    "aⁿbⁿ.save_gif(\"aaabbb\",'anbn.gif',show=True)"
    ]
   }
  ],
@@ -280,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
