--- a/lfya/08 Maquinas con cinta.ipynb
+++ b/lfya/08 Maquinas con cinta.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/07%20Revisando%20la%20jerarqu%C3%ADa%20de%20Chomsky.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ivanvladimir/maquinas_notebooks/blob/main/lfya/08%20Maquinas%20con%20cinta.ipynb)\n",
     "\n",
     "# 09 Máquinas con cinta\n",
     "\n",
