--- a/lfya/08 Maquinas con cinta.ipynb
+++ b/lfya/08 Maquinas con cinta.ipynb
@@ -175,14 +175,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aⁿbⁿ.save_gif(\"aaabb\",filename=\"anbn_reject.gif\",show=True)"
+    "#aⁿbⁿ.save_gif(\"aaabb\",filename=\"anbn_reject.gif\",show=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Sumando uno a numero binario"
    ]
